@@ -1,5 +1,5 @@
 /*
- * $Id: wgraph.c,v 1.213 2016/07/27 19:38:22 markisch Exp $
+ * $Id: wgraph.c,v 1.214 2016/08/09 05:22:36 markisch Exp $
  */
 
 /* GNUPLOT - win/wgraph.c */
@@ -55,6 +55,7 @@
 #include "winmain.h"
 #include "wresourc.h"
 #include "wcommon.h"
+#include "wgnuplib.h"
 #include "term_api.h"         /* for enum JUSTIFY */
 #ifdef USE_MOUSE
 # include "gpexecute.h"
@@ -186,26 +187,11 @@ static TBOOLEAN brushes_initialized = FALSE;
    Do not access outside draw_enhanced_text, GraphEnhancedOpen or
    GraphEnhancedFlush.
 */
+enhstate_struct enhstate;
+
 static struct {
-	LPGW lpgw;           /* graph window */
 	HDC  hdc;            /* device context */
-	LPRECT rect;         /* rect to update */
-	BOOL opened_string;  /* started processing of substring? */
-	BOOL show;           /* print this substring? */
-	int overprint;       /* overprint flag */
-	BOOL widthflag;      /* FALSE for zero width boxes */
-	BOOL sizeonly;       /* only measure length of substring? */
-	double base;         /* current baseline position (above initial baseline) */
-	int xsave, ysave;    /* save text position for overprinted text */
-	int x, y;            /* current text position */
-	TCHAR fontname[MAXFONTNAME]; /* current font name */
-	double fontsize;     /* current font size */
-	int totalwidth;      /* total width of printed text */
-	int totalasc;        /* total height above center line */
-	int totaldesc;       /* total height below center line */
-	double res_scale;    /* scaling due to different resolution (printers) */
-	int shift;           /* baseline alignment */
-} enhstate;
+} enhstate_gdi;
 
 
 /* ================================== */
@@ -224,7 +210,9 @@ static void	Wnd_GetTextSize(HDC hdc, LPCSTR str, size_t len, int *cx, int *cy);
 static void	GetPlotRect(LPGW lpgw, LPRECT rect);
 static void	MakeFonts(LPGW lpgw, LPRECT lprect, HDC hdc);
 static void	DestroyFonts(LPGW lpgw);
+static void	SetFont(LPGW lpgw, HDC hdc);
 static void	SelFont(LPGW lpgw);
+static void	GraphChangeFont(LPGW lpgw, LPCTSTR font, int fontsize, HDC hdc, RECT rect);
 static void	dot(HDC hdc, int xdash, int ydash);
 static unsigned int GraphGetTextLength(LPGW lpgw, HDC hdc, LPCSTR text);
 static void	draw_text_justify(HDC hdc, int justify);
@@ -368,7 +356,9 @@ void
 GraphInitStruct(LPGW lpgw)
 {
 	if (!lpgw->initialized) {
+#ifndef WIN_CUSTOM_PENS
 		int i;
+#endif
 
 		lpgw->initialized = TRUE;
 		if (lpgw != listgraphs) {
@@ -1057,7 +1047,7 @@ DestroyFonts(LPGW lpgw)
 }
 
 
-void
+static void
 SetFont(LPGW lpgw, HDC hdc)
 {
 	SelectObject(hdc, lpgw->hfonth);
@@ -1167,27 +1157,78 @@ luma_from_color(unsigned red, unsigned green, unsigned blue)
 static unsigned int
 GraphGetTextLength(LPGW lpgw, HDC hdc, LPCSTR text)
 {
-    SIZE size;
-    LPWSTR textw;
+	SIZE size;
+	LPWSTR textw;
 
-    if (text == NULL)
-	return 0;
+	if (text == NULL)
+		return 0;
 
-    textw = UnicodeText(text, lpgw->encoding);
-    if (textw) {
-        GetTextExtentPoint32W(hdc, textw, wcslen(textw), &size);
-        free(textw);
-    } else {
-        GetTextExtentPoint32A(hdc, text, strlen(text), &size);
-    }
-    size.cx += GetTextCharacterExtra(hdc);
-    return size.cx;
+	textw = UnicodeText(text, lpgw->encoding);
+	if (textw) {
+		GetTextExtentPoint32W(hdc, textw, wcslen(textw), &size);
+		free(textw);
+	} else {
+		GetTextExtentPoint32A(hdc, text, strlen(text), &size);
+	}
+	return size.cx;
 }
 
 
+/*   local enhanced text helper functions */
+
+static void
+EnhancedSetFont()
+{
+	GraphChangeFont(enhstate.lpgw, enhstate.fontname, enhstate.fontsize,
+	                enhstate_gdi.hdc, *(enhstate.rect));
+	SetFont(enhstate.lpgw, enhstate_gdi.hdc);
+}
+
+static unsigned
+EnhancedTextLength(char * text)
+{
+	return GraphGetTextLength(enhstate.lpgw, enhstate_gdi.hdc, text);
+}
+
+static void
+EnhancedPutText(int x, int y, char * text)
+{
+	draw_put_text(enhstate.lpgw, enhstate_gdi.hdc, x, y, text);
+}
+
+static void
+EnhancedCleanup()
+{
+	/* restore text alignment */
+	draw_text_justify(enhstate_gdi.hdc, enhstate.lpgw->justify);
+}
+
+static void
+draw_enhanced_init(HDC hdc)
+{
+	enhstate.set_font = &EnhancedSetFont;
+	enhstate.text_length = &EnhancedTextLength;
+	enhstate.put_text = &EnhancedPutText;
+	enhstate.cleanup = &EnhancedCleanup;
+
+	enhstate_gdi.hdc = hdc;
+	enhstate.res_scale = 1.;
+	if ((GetDeviceCaps(hdc, TECHNOLOGY) == DT_RASPRINTER)) {
+		HDC hdc_screen = GetDC(NULL);
+		enhstate.res_scale = (double) GetDeviceCaps(hdc, VERTRES) /
+		           (double) GetDeviceCaps(hdc_screen, VERTRES);
+		ReleaseDC(NULL, hdc_screen);
+	}
+
+	SetTextAlign(hdc, TA_LEFT|TA_BASELINE);
+}
+
+
+/* enhanced text functions shared with wgdiplus.cpp */
+
 void
 GraphEnhancedOpen(char *fontname, double fontsize, double base,
-    BOOL widthflag, BOOL showflag, int overprint)
+    TBOOLEAN widthflag, TBOOLEAN showflag, int overprint)
 {
 	const int win_scale = 1; /* scaling of base offset */
 
@@ -1226,16 +1267,14 @@ GraphEnhancedOpen(char *fontname, double fontsize, double base,
 			_tcscpy(enhstate.fontname, enhstate.lpgw->deffontname);
 		}
 		enhstate.fontsize = fontsize;
-		GraphChangeFont(enhstate.lpgw, enhstate.fontname, enhstate.fontsize,
-		                enhstate.hdc, *(enhstate.rect));
-		SetFont(enhstate.lpgw, enhstate.hdc);
+		enhstate.set_font();
 
 		/* Scale fractional font height to vertical units of display */
 		/* TODO: Proper use of OUTLINEFONTMETRICS would yield better
 		   results. */
 		enhstate.base = win_scale * base *
-						enhstate.lpgw->sampling * enhstate.lpgw->fontscale *
-						enhstate.res_scale;
+		                enhstate.lpgw->sampling * enhstate.lpgw->fontscale *
+		                enhstate.res_scale;
 	}
 }
 
@@ -1256,7 +1295,7 @@ GraphEnhancedFlush(void)
 	y = enhstate.y - enhstate.base * cos(angle);
 
 	/* calculate length of string first */
-	len = GraphGetTextLength(enhstate.lpgw, enhstate.hdc, enhanced_text);
+	len = enhstate.text_length(enhanced_text);
 	width = cos(angle) * len;
 	height = -sin(angle) * len;
 
@@ -1272,7 +1311,7 @@ GraphEnhancedFlush(void)
 
 	/* display string */
 	if (enhstate.show && !enhstate.sizeonly)
-		draw_put_text(enhstate.lpgw, enhstate.hdc, x, y, enhanced_text);
+		enhstate.put_text(x, y, enhanced_text);
 
 	/* update drawing position according to text length */
 	if (!enhstate.widthflag) {
@@ -1313,7 +1352,7 @@ GraphEnhancedFlush(void)
 
 
 int
-draw_enhanced_text(LPGW lpgw, HDC hdc, LPRECT rect, int x, int y, const char * str)
+draw_enhanced_text(LPGW lpgw, LPRECT rect, int x, int y, const char * str)
 {
 	const char * original_string = str;
 	unsigned int pass, num_passes;
@@ -1323,7 +1362,6 @@ draw_enhanced_text(LPGW lpgw, HDC hdc, LPRECT rect, int x, int y, const char * s
 
 	/* Init enhanced text state */
 	enhstate.lpgw = lpgw;
-	enhstate.hdc = hdc;
 	enhstate.rect = rect;
 	enhstate.opened_string = FALSE;
 	_tcscpy(enhstate.fontname, lpgw->fontname);
@@ -1334,14 +1372,6 @@ draw_enhanced_text(LPGW lpgw, HDC hdc, LPRECT rect, int x, int y, const char * s
 	enhstate.totalwidth = 0;
 	enhstate.totalasc = 0;
 	enhstate.totaldesc = 0;
-
-	enhstate.res_scale = 1.;
-	if ((GetDeviceCaps(hdc, TECHNOLOGY) == DT_RASPRINTER)) {
-		HDC hdc_screen = GetDC(NULL);
-		enhstate.res_scale = (double) GetDeviceCaps(hdc, VERTRES) /
-		           (double) GetDeviceCaps(hdc_screen, VERTRES);
-		ReleaseDC(NULL, hdc_screen);
-	}
 
 	/* Save font information */
 	_tcscpy(save_fontname, lpgw->fontname);
@@ -1362,7 +1392,6 @@ draw_enhanced_text(LPGW lpgw, HDC hdc, LPRECT rect, int x, int y, const char * s
 	}
 
 	/* We actually print everything left to right. */
-	SetTextAlign(hdc, TA_LEFT|TA_BASELINE);
 	/* Adjust baseline position: */
 	enhstate.shift = lpgw->tmHeight/2 - lpgw->tmDescent;
 	enhstate.x += sin(lpgw->angle * M_PI/180) * enhstate.shift;
@@ -1412,12 +1441,13 @@ draw_enhanced_text(LPGW lpgw, HDC hdc, LPRECT rect, int x, int y, const char * s
 	/* restore terminal */
 	if (WIN_term) term = tsave;
 
-	/* restore previous font */
-	GraphChangeFont(lpgw, save_fontname, save_fontsize, hdc, *rect);
-	SetFont(lpgw, hdc);
+	/* restore font */
+	_tcscpy(enhstate.fontname, save_fontname);
+	enhstate.fontsize = save_fontsize;
+	enhstate.set_font();
 
-	/* restore text alignment */
-	draw_text_justify(hdc, enhstate.lpgw->justify);
+	/* clean-up */
+	enhstate.cleanup();
 
 	return enhstate.totalwidth;
 }
@@ -1759,7 +1789,7 @@ drawgraph(LPGW lpgw, HDC hdc, LPRECT rect)
 	int seq = 0;				/* sequence counter for W_image and W_boxedtext */
 	int i;
 
-    if (lpgw->locked) return;
+	if (lpgw->locked) return;
 
 	/* clear hypertexts only in display sessions */
 	interactive = (GetObjectType(hdc) == OBJ_MEMDC) ||
@@ -1852,7 +1882,7 @@ drawgraph(LPGW lpgw, HDC hdc, LPRECT rect)
 		curptr = (struct GWOP *)blkptr->gwop;
 	}
 	if (curptr == NULL)
-	    return;
+		return;
 
 	while (ngwop < lpgw->nGWOP) {
 		/* transform the coordinates */
@@ -2030,8 +2060,7 @@ drawgraph(LPGW lpgw, HDC hdc, LPRECT rect)
 			break;
 
 		case W_put_text: {
-			char * str;
-			str = LocalLock(curptr->htext);
+			char * str = (char *) LocalLock(curptr->htext);
 			if (str) {
 				int dxl, dxr;
 				int slen, vsize;
@@ -2080,12 +2109,12 @@ drawgraph(LPGW lpgw, HDC hdc, LPRECT rect)
 		}
 
 		case W_enhanced_text: {
-			char * str;
-			str = LocalLock(curptr->htext);
+			char * str = (char *) LocalLock(curptr->htext);
 			if (str) {
 				RECT extend;
 
-				draw_enhanced_text(lpgw, hdc, rect, xdash, ydash, str);
+				draw_enhanced_init(hdc);
+				draw_enhanced_text(lpgw, rect, xdash, ydash, str);
 				draw_get_enhanced_text_extend(&extend);
 				if (keysample) {
 					draw_update_keybox(lpgw, plotno, xdash - extend.left, ydash - extend.top);
@@ -4043,12 +4072,9 @@ WndGraphProc(HWND hwnd, UINT message, WPARAM wParam, LPARAM lParam)
 	}
 #endif /* USE_MOUSE */
 
-
-
-	switch(message)
-	{
+	switch(message) {
 		case WM_SYSCOMMAND:
-			switch(LOWORD(wParam))
+			switch (LOWORD(wParam))
 			{
 				case M_GRAPH_TO_TOP:
 				case M_COLOR:
@@ -4497,10 +4523,10 @@ WndGraphProc(HWND hwnd, UINT message, WPARAM wParam, LPARAM lParam)
 			ReleaseDC(hwnd, hdc);
 			if (lpgw->lptw && (lpgw->lptw->DragPre != NULL) && (lpgw->lptw->DragPost != NULL))
 			    DragAcceptFiles(hwnd, TRUE);
-			return(0);
+			return 0;
 
 		case WM_ERASEBKGND:
-			return(1); /* we erase the background ourselves */
+			return 1; /* we erase the background ourselves */
 
 		case WM_PAINT: {
 			HDC memdc = NULL;
@@ -4690,16 +4716,16 @@ WndGraphProc(HWND hwnd, UINT message, WPARAM wParam, LPARAM lParam)
 		case WM_CLOSE:
 			GraphClose(lpgw);
 			return 0;
-		}
+	}
 	return DefWindowProc(hwnd, message, wParam, lParam);
 }
 
 
-void
+static void
 GraphChangeFont(LPGW lpgw, LPCTSTR font, int fontsize, HDC hdc, RECT rect)
 {
-    int newfontsize;
-    bool remakefonts = FALSE;
+	int newfontsize;
+	bool remakefonts = FALSE;
 	bool font_is_not_empty = (font != NULL && *font != '\0');
 
 	newfontsize = (fontsize != 0) ? fontsize : lpgw->deffontsize;
@@ -4827,7 +4853,7 @@ Graph_set_ruler (LPGW lpgw, int x, int y )
  *	1, 2: at corners of zoom box with \r separating text
  */
 void
-Graph_put_tmptext (LPGW lpgw, int where, LPCSTR text )
+Graph_put_tmptext(LPGW lpgw, int where, LPCSTR text)
 {
 	/* Position of the annotation string (mouse movement) or zoom box
 	* text or whatever temporary text added...
@@ -4859,7 +4885,7 @@ Graph_put_tmptext (LPGW lpgw, int where, LPCSTR text )
 
 
 void
-Graph_set_clipboard (LPGW lpgw, LPCSTR s)
+Graph_set_clipboard(LPGW lpgw, LPCSTR s)
 {
 	size_t length;
 	HGLOBAL memHandle;
@@ -5056,7 +5082,7 @@ GraphModifyPlots(LPGW lpgw, unsigned int ops, int plotno)
 /* Draw the ruler.
  */
 static void
-DrawRuler (LPGW lpgw)
+DrawRuler(LPGW lpgw)
 {
 	HDC hdc;
 	int iOldRop;
@@ -5085,7 +5111,7 @@ DrawRuler (LPGW lpgw)
 /* Draw the ruler line to cursor position.
  */
 static void
-DrawRulerLineTo (LPGW lpgw)
+DrawRulerLineTo(LPGW lpgw)
 {
 	HDC hdc;
 	int iOldRop;
@@ -5110,10 +5136,11 @@ DrawRulerLineTo (LPGW lpgw)
 	ReleaseDC(lpgw->hWndGraph, hdc);
 }
 
+
 /* Draw the zoom box.
  */
 static void
-DrawZoomBox (LPGW lpgw)
+DrawZoomBox(LPGW lpgw)
 {
 	HDC hdc;
 	long fx, fy, tx, ty, text_y;
@@ -5158,7 +5185,7 @@ DrawZoomBox (LPGW lpgw)
 		if (separator) {
 			Draw_XOR_Text(lpgw, zoombox.text2, separator - zoombox.text2, tx, ty);
 			Draw_XOR_Text(lpgw, separator + 1, strlen(separator + 1), tx, ty + text_y);
-		} else  {
+		} else {
 			Draw_XOR_Text(lpgw, zoombox.text2, strlen(zoombox.text2), tx, ty + lpgw->vchar / 2);
 		}
 	}
