@@ -1,5 +1,14 @@
 2016-08-09  Bastian Maerkisch  <bmaerkisch@web.de>
 
+	* src/win/wcommon.h src/win/wgnuplib.h src/win/wgraph.c
+	src/win/wgdiplus.cpp:  GDI+ implementation of enhanced text.
+	Until now the GDI+ backend still used the GDI code to draw enhanced
+	text, which caused differences in layout if text was rendered as
+	"normal" or enhanced text.  We now re-use the previous GDI-only
+	routines and introduce function pointers to call GDI or GDI+ code
+	depending on if they are called from drawgraph() or
+	drawgraph_gdiplus().
+
 	* src/win/wmenu.c:  Loading of icon images requires GDI+.  Add an error
 	message if support for it is not compiled in.  Fix the case when
 	GNUPLOT_SHARE_DIR is not defined.
